@@ -42,3 +42,7 @@
     display: none;
 }
 
+.firephpMenuWelcomeItem {
+  color: red;
+}
+
